update: added disclaimer for recruiters, new image, added some description

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <body>
     <center>
-      <!-- Gambar di paling atas -->
-      <img src="img/WhatsApp Image 2025-10-21 at 17.22.55_089dbe90.jpg" alt="Ikbar Faiz" width="200" height="200"><br><br>
+      <p style="color: red;">Disclaimer for recruiters: sorry for bad design😔</p>
+      <img src="img/iam smart.jpg" alt="Ikbar Faiz" width="400" height="400"><br><br>
 
-      <p>Sup, I'm <b>Ikbar Faiz</b>, a Computer Science student at <b>BINUS University (3rd Semester btw)</b>.</p>
+      <p>So, I'm <b>Ikbar Faiz</b>, a Computer Science student at <b>BINUS University (3rd Semester btw)</b>.</p>
       <p>
         I’m currently interested in becoming a <b>Cloud Engineer</b> — exploring things like Azure, infrastructure,
         and automation. (I hope it turns out well bruh🥀)
@@ -20,7 +20,7 @@
 
       <p>
         Some people use fancy CSS grids and animations to tell their story.<br>
-        I use plain HTML. Because truth doesn’t need gradients.
+        I use plain HTML. Because truth doesn’t need gradients (just excuse, i am naturally not build for frontend).
       </p>
 
       <hr width="50%">
